--- a/Assignment1/WebsiteLayout.html
+++ b/Assignment1/WebsiteLayout.html
@@ -77,7 +77,7 @@
                     You'll be able to find pictures, learn about breed history, temperament, common breed diseases and conditions and lots of other interesting facts to help guide you through the process of choosing the right dog!</p>
                     <p>Gallery</p>
                 </article>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fcyshDExRuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fcyshDExRuQ" title="YouTube video player" frameborder="0"  allowfullscreen></iframe>
 
                 <p class="gallery">Gallery</p>
                 <div class="gallery-images"
