fixed tag names

--- a/Assignment2/Layout2-CSS.html
+++ b/Assignment2/Layout2-CSS.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>  
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Layout 2</title>
         <link rel="stylesheet" href="Layout2.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="navigation">
@@ -16,57 +18,52 @@
                     <a href="https://www.royalenfield.com/">contact us</a>
             </div>
         </div>
-        <header>Royal Enfield</header>
+        <h1>Royal Enfield</h1>
         <div class="img-cards">
             <div class="card">
-                <img src="/Assets/bike1.jpeg" alt="bike" width="200px" height="200px"/>
+                <img src="/Assets/bike1.jpeg" alt="bike" class="card-img"/>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti id ipsum, nihil eius harum quod officiis fuga expedita aliquid magnam laborum ullam repellendus facilis fugit deleniti aperiam eaque reiciendis vel.</p>
             </div>
             <div class="card">
-                <img src="/Assets/bike2.jpeg" alt="bike" width="200px" height="200px"/>
+                <img src="/Assets/bike2.jpeg" alt="bike" class="card-img"/>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed eaque ut ullam iste distinctio repellendus earum provident quidem, deserunt similique aperiam dignissimos, qui porro eveniet a illum. Ullam, facere nulla?</p>
             </div>
             <div class="card">
-                <img src="/Assets/bike3.jpeg" alt="bike" width="200px" height="200px"/>
+                <img src="/Assets/bike3.jpeg" alt="bike" class="card-img"/>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet repellendus nihil ipsa eaque, modi laboriosam ducimus repudiandae unde adipisci maiores quam excepturi vero quia quaerat sint velit. Odio, iste.</p>
             </div>
         </div>
         <div class="btn">
-            <div class="btn-topic">
-                <button value="submit">Topic</button>
-                <button value="submit">Topic</button>
-            </div>
-            <div class="next-btn">
-                <button value="submit">Next</button>
-            </div>
+                <button value="submit" class="topic-btn">Topic</button>
+                <button value="submit" class="topic-btn">Topic</button>
+                <button value="submit" class="next-btn">Next</button>
         </div>
         <div class="image-container">
-            <img src="/Assets/main-image.png" alt="main image" width="100%"/>
+            <img src="/Assets/main-image.png" alt="main image" width="100%" class="blurimg"/>
             <div class="left">
-                <h1>Ladak</h1>
+                <h2>Ladak</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat alias quas non veniam vero minima quod error at tenetur laudantium inventore odit minus laboriosam, explicabo accusamus distinctio eum, numquam atque!</p>
             </div>
         </div>
-        <div class="footer">
-            <img src="/Assets/Logo.jpg" alt="logo" width="100px" height="100px">
+        <footer class="footer"> 
+                <img src="/Assets/Logo.jpg" alt="logo" width="100px" height="100px">
             <div class="contact">
                 <ul>
-                    <li> <a href="https://www.levi.in/stores" title="contact">Conacat Us</a></li>
-                    <li>  <a href="https://www.levi.in/stores" title="contact">Conacat Us</a></li>
-                    <li>  <a href="https://www.levi.in/stores" title="contact">Conacat Us</a></li>
-                    <li>  <a href="https://www.levi.in/stores" title="contact">Conacat Us</a></li>
+                    <li> <a href="https://www.royalenfield.com/" title="contact">facecebook</a></li>
+                    <li>  <a href="https://www.royalenfield.com/" title="contact">Instagram</a></li>
+                    <li>  <a href="https://www.royalenfield.com/" title="contact">Tweeter</a></li>
+                    <li>  <a href="https://www.royalenfield.com/" title="contact">WhatsApp</a></li>
                 </ul>
             </div>
             <div class="addr">
-                <h2>Address:</h2>
-                <p>asdfghjklvgfdsbfabnafnkrbra</p>
-                <p>dkbjsdjvafivivf</p>
-                <p>ksjdfajsvbfaviufa</p>
+                <h3>Address:</h3>
+                <p>Survey no 14, Plot No. 6, Lane No.1 , Near Warje Octroi Post, Datta Digambar Colony Road, Pune, Maharashtra 411052</p>
             </div>
-
-        </div>
-        <div class="social">
-            <p>Instagram,facecebook,Tweeter</p>
-        </div>
+             <div class="social">
+                <i class="fa fa-instagram" style="font-size:36px"></i>
+                <i class="fa fa-facebook-f" style="font-size:36px"></i>
+                <i class="fa fa-twitter-square" style="font-size:36px"></i>
+            </div>
+        </footer>
     </body>
 </html>
