--- a/Assignment3/dashboard.html
+++ b/Assignment3/dashboard.html
@@ -83,7 +83,7 @@
                    </div>
             </div>    
         </div>       
-      <!-- Details code -->
+      <!-- card 1 -->
         <div class="card-div">
             <div class="card-comp" >
                 <div class="btn-card">
@@ -122,7 +122,7 @@
                     <button class="card-submit"> View</button>
                 </div>
             </div>
-            <!-- card1 done -->
+            <!-- card2  -->
             <div class="card-comp" >  
                 <div class="btn-card">
                     <i class="fa fa-envelope fa-2x " aria-hidden="true"></i>
@@ -160,7 +160,7 @@
                     <button class="card-submit"> View</button>
                 </div>
             </div>
-            <!-- car2 done     -->
+            <!-- card 3-->
             <div class="card-comp" > 
                 <div class="btn-card">
                     <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
