--- a/Assignment3/dashboard.html
+++ b/Assignment3/dashboard.html
@@ -127,7 +127,7 @@
                 <div class="btn-card">
                     <i class="fa fa-envelope fa-2x " aria-hidden="true"></i>
                         <div class="btn-car1">
-                            <button class="btn-ak" type="submit">AKNOWLEEDGED</button>
+                            <button class="btn-ak" type="submit">AKNOWLEDGED</button>
                             <button class="btn-ur" type="submit">URGENT</button>
                         </div>
                 </div>            
@@ -156,7 +156,7 @@
                         </ul>
                     </div>
                     <p class="side1"><span><i class="fa fa-github-square" aria-hidden="true"></i></span>Not yet Cerified</p>
-                    <p class="side2">||<span><i class="fa fa-github-square" aria-hidden="true"></i></span> Advisory</p>
+                    <p class="side2"><span><i class="fa fa-github-square" aria-hidden="true"></i></span> Advisory</p>
                     <button class="card-submit"> View</button>
                 </div>
             </div>
