--- a/Assignment5/websitelayout-bootstrap.html
+++ b/Assignment5/websitelayout-bootstrap.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid bg-dark sticky-top">
-        <nav class="navbar navbar-light navbar-expand-lg  navbar-dark">
+        <nav class="navbar  navbar-expand-lg  navbar-dark">
             <a href="#" class="navbar-brand">
                 <img class="d-inline-block" 
                 src="/Assets/footerLogo.png" height="50" width="80"/> 
